--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="com.talat.soundtone.MainActivity"
+                android:resource="@xml/searchable">
+            </meta-data>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
